--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@ $(document).ready(function () {
 
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#introduction">Introduction</a></li>
+<li><a href="#data-exploration-and-preprocessing">Data Exploration and Preprocessing</a></li>
+<li><a href="#modeling">Modeling</a></li>
+<li><a href="#results">Results</a></li>
+<li><a href="#conclusions">Conclusions</a></li>
+<li><a href="#references">References</a></li>
+</ul>
+</div>
 
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
